# osslsigncode

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  configure.scan
Portfile/: PortIndex  PortIndex.quick
m4/: pkg.m4
